--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
-	/* background-color: #232323;
-	color: #eaeaea; */
 }
 
 .intro {
@@ -14,13 +12,17 @@ body {
 }
 
 .title>h3 {
-	color: #666666;
+	color: #777;
 }
 
 .btn-convert {
 	display: flex;
 	justify-content: center;
 	padding: 20px;
+}
+
+.btn-copy {
+	width: 100%;
 }
 
 button {
@@ -53,9 +55,6 @@ textarea {
 	height: 100%;
 	width: 100%;
 	font-size: 12pt;
-	/* background-color: #232323;
-	color: #fff;
-	border: 1px solid #424242; */
 }
 
 @media (max-width: 800px) {
@@ -65,5 +64,26 @@ textarea {
 
 	.intro>div {
 		width: 100%;
+	}
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #232323;
+		color: #ccc;
+	}
+
+	textarea {
+		background-color: #232323;
+		color: #ccc;
+		border: 1px solid #424242;
+	}
+
+	button {
+		background-color: #ccc;
+	}
+
+	input {
+		background-color: #ccc;
 	}
 }
